WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282762
[WebGPU] Fix internal builds
https://bugs.webkit.org/show_bug.cgi?id=282762
Summary
[WebGPU] Fix internal builds
Mike Wyrzykowski
Reported
2024-11-07 09:18:32 PST
[WebGPU] Fix internal builds
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-07 09:18:47 PST
<
rdar://problem/139444399
>
Mike Wyrzykowski
Comment 2
2024-11-07 09:20:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36333
EWS
Comment 3
2024-11-07 14:48:31 PST
Committed
286303@main
(3a9258ccc0df): <
https://commits.webkit.org/286303@main
> Reviewed commits have been landed. Closing PR #36333 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug