[WebGPU] Fix internal builds https://bugs.webkit.org/show_bug.cgi?id=282762 rdar://139444399

Unreviewed internal build fix.

* Source/WebGPU/WebGPU/WebGPUExt.h:
* Source/WebGPU/WebGPU/WebGPUInternal.h:
* Source/WebGPU/WebGPU/WebGPU.h:

Canonical link: https://commits.webkit.org/286303@main